emart-manifests/client/kingress.yml
# Ingress for frontend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client
  namespace: emart
  labels:
    name: client
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-svc
            port:
              number: 4200

---
# Ingress for backend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: emart
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-svc
            port:
              number: 5000
      - pathType: Prefix
        path: "/webapi"
        backend:
          service:
            name: webapi-svc
            port:
              number: 9000
